@@ -14,21 +14,27 @@ import java.util.UUID;
 import java.util.function.BiPredicate;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.Holder;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.gametest.framework.GameTestAssertException;
-import net.minecraft.gametest.framework.GameTestAssertPosException;
+import net.minecraft.gametest.framework.GameTestException;
 import net.minecraft.gametest.framework.GameTestHelper;
 import net.minecraft.gametest.framework.GameTestInfo;
 import net.minecraft.gametest.framework.GameTestListener;
 import net.minecraft.gametest.framework.GameTestRunner;
 import net.minecraft.network.Connection;
+import net.minecraft.network.ProtocolInfo;
+import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.PacketFlow;
+import net.minecraft.network.protocol.game.ServerGamePacketListener;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.network.CommonListenerCookie;
+import net.minecraft.server.network.ServerGamePacketListenerImpl;
 import net.minecraft.world.Difficulty;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
@@ -53,6 +59,7 @@ import net.minecraft.world.phys.Vec3;
 import net.neoforged.bus.api.Event;
 import net.neoforged.neoforge.capabilities.BlockCapability;
 import net.neoforged.neoforge.common.NeoForge;
+import net.neoforged.neoforge.common.util.FakePlayer;
 import net.neoforged.neoforge.event.entity.living.LivingKnockBackEvent;
 import net.neoforged.neoforge.network.registration.NetworkRegistry;
 import org.jetbrains.annotations.Nullable;
@@ -64,7 +71,7 @@ public class ExtendedGameTestHelper extends GameTestHelper {
 
     @Override
     public ExtendedSequence startSequence() {
-        final var sq = new ExtendedSequence(testInfo);
+        final var sq = new ExtendedSequence(this);
         testInfo.sequences.add(sq);
         return sq;
     }
@@ -98,7 +105,7 @@ public class ExtendedGameTestHelper extends GameTestHelper {
     public <T, E extends Entity> void assertEntityProperty(E entity, Function<E, T> function, String valueName, T expected, BiPredicate<T, T> tester) {
         final T value = function.apply(entity);
         if (!tester.test(value, expected)) {
-            throw new GameTestAssertException("Entity " + entity + " value " + valueName + "=" + value + " is not equal to expected " + expected);
+            throw this.assertionException("Entity %s value %s=%s is not equal to expected %s", entity, valueName, value, expected);
         }
     }
 
@@ -128,16 +135,21 @@ public class ExtendedGameTestHelper extends GameTestHelper {
         NetworkRegistry.configureMockConnection(connection);
         this.getLevel().getServer().getPlayerList().placeNewPlayer(connection, serverplayer, commonlistenercookie);
         this.getLevel().getServer().getConnection().getConnections().add(connection);
+        connection.setupInboundProtocol((ProtocolInfo<ServerGamePacketListener>) connection.getInboundProtocol(), new ServerGamePacketListenerImpl(serverplayer.getServer(), connection, serverplayer, commonlistenercookie) {
+            @Override
+            protected void keepConnectionAlive() {}
+        });
         this.testInfo.addListener(serverplayer);
         serverplayer.gameMode.changeGameModeForPlayer(gameType);
         serverplayer.setYRot(180);
         serverplayer.connection.chunkSender.sendNextChunks(serverplayer);
         serverplayer.connection.chunkSender.onChunkBatchReceivedByClient(64f);
+        serverplayer.setClientLoaded(true);
         return serverplayer;
     }
 
-    public Player makeOpMockPlayer(int commandLevel) {
-        return new Player(this.getLevel(), BlockPos.ZERO, 0.0F, new GameProfile(UUID.randomUUID(), "test-mock-player")) {
+    public ServerPlayer makeOpMockPlayer(int commandLevel) {
+        return new FakePlayer(this.getLevel(), new GameProfile(UUID.randomUUID(), "test-mock-player")) {
             @Override
             public boolean isSpectator() {
                 return false;
@@ -154,7 +166,7 @@ public class ExtendedGameTestHelper extends GameTestHelper {
             }
 
             @Override
-            protected int getPermissionLevel() {
+            public int getPermissionLevel() {
                 return commandLevel;
             }
         };
@@ -165,31 +177,8 @@ public class ExtendedGameTestHelper extends GameTestHelper {
         return BlockPos.MutableBlockPos.betweenClosedStream(bounds);
     }
 
-    @Nullable
-    public <T extends BlockEntity> T getBlockEntity(BlockPos pos, Class<T> type) {
-        final var be = this.getBlockEntity(pos);
-        if (be == null) return null;
-        if (!type.isInstance(be)) {
-            throw new GameTestAssertPosException("Expected block entity of type " + type + " but was " + be.getClass(), this.absolutePos(pos), pos, this.getTick());
-        }
-        return type.cast(be);
-    }
-
-    @Nullable
     public <T extends BlockEntity> T getBlockEntity(int x, int y, int z, Class<T> type) {
         return getBlockEntity(new BlockPos(x, y, z), type);
-    }
-
-    public <T extends BlockEntity> T requireBlockEntity(BlockPos pos, Class<T> type) {
-        final var be = getBlockEntity(pos, type);
-        if (be == null) {
-            throw new GameTestAssertPosException("Expected block entity of type " + type + " but there was none", this.absolutePos(pos), pos, this.getTick());
-        }
-        return be;
-    }
-
-    public <T extends BlockEntity> T requireBlockEntity(int x, int y, int z, Class<T> type) {
-        return requireBlockEntity(new BlockPos(x, y, z), type);
     }
 
     @Nullable
@@ -200,21 +189,22 @@ public class ExtendedGameTestHelper extends GameTestHelper {
     public <T, C extends @Nullable Object> T requireCapability(BlockCapability<T, C> cap, BlockPos pos, C context) {
         final var capability = getCapability(cap, pos, context);
         if (capability == null) {
-            throw new GameTestAssertPosException("Expected capability " + cap + " but there was none", absolutePos(pos), pos, getTick());
+            throw this.assertionException(pos, "Expected capability %s but there was none", cap);
         }
         return capability;
     }
 
     public <T> ParametrizedGameTestSequence<T> startSequence(Supplier<T> value) {
-        return new ParametrizedGameTestSequence<>(this.testInfo, this.startSequence(), value);
+        return new ParametrizedGameTestSequence<>(this, this.startSequence(), value);
     }
 
     public Player makeMockPlayer() {
         return makeMockPlayer(GameType.CREATIVE);
     }
 
-    public void killAllEntitiesOfClass(Class<?>... types) {
-        for (Class<?> type : types) {
+    @SafeVarargs
+    public final void killAllEntitiesOfClass(Class<? extends Entity>... types) {
+        for (var type : types) {
             this.killAllEntitiesOfClass(type);
         }
     }
@@ -232,11 +222,7 @@ public class ExtendedGameTestHelper extends GameTestHelper {
         }
 
         if (count < lowerLimit) {
-            throw new GameTestAssertPosException(
-                    "Expected at least " + lowerLimit + " " + item.getDescription().getString() + " items to exist (found " + count + ")",
-                    blockpos,
-                    pos,
-                    this.getTick());
+            throw this.assertionException(pos, "Expected at least %s %s items to exist (found %s)", lowerLimit, item.getName().getString(), count);
         }
     }
 
@@ -261,7 +247,7 @@ public class ExtendedGameTestHelper extends GameTestHelper {
      */
     public void boneMealUntilGrown(int x, int y, int z, Player player) {
         boneMeal(x, y, z, player);
-        assertBlockState(new BlockPos(x, y, z), state -> !(state.getBlock() instanceof BonemealableBlock), () -> "Crop didn't grow");
+        assertBlockState(new BlockPos(x, y, z), state -> !(state.getBlock() instanceof BonemealableBlock), $ -> Component.translatable("Crop didn't grow"));
     }
 
     public void assertContainerEmpty(int x, int y, int z) {
@@ -277,7 +263,7 @@ public class ExtendedGameTestHelper extends GameTestHelper {
     }
 
     public void assertPlayerHasItem(Player player, Item item) {
-        assertTrue(player.getInventory().hasAnyOf(Set.of(item)), "Player doesn't have '" + BuiltInRegistries.ITEM.getKey(item) + "' in their inventory!");
+        assertTrue(player.getInventory().hasAnyOf(Set.of(item)), Component.translatable("Player doesn't have '%s' in their inventory!", BuiltInRegistries.ITEM.getKey(item).toString()));
     }
 
     public void requireDifficulty(final Difficulty difficulty) {
@@ -311,16 +297,20 @@ public class ExtendedGameTestHelper extends GameTestHelper {
     public <T> T catchException(final ThrowingSupplier<T> supplier) {
         try {
             return supplier.get();
+        } catch (GameTestException exception) {
+            throw this.assertionException(exception.getDescription());
         } catch (Throwable throwable) {
-            throw new GameTestAssertException(throwable.getMessage());
+            throw this.assertionException(Component.literal(throwable.getMessage()));
         }
     }
 
     public void catchException(final ThrowingRunnable run) {
         try {
             run.run();
+        } catch (GameTestException exception) {
+            throw this.assertionException(exception.getDescription());
         } catch (Throwable throwable) {
-            throw new GameTestAssertException(throwable.getMessage());
+            throw this.assertionException(Component.literal(throwable.getMessage()));
         }
     }
 
@@ -330,8 +320,8 @@ public class ExtendedGameTestHelper extends GameTestHelper {
 
     public <T extends Entity> T requireEntityAt(EntityType<T> type, BlockPos pos) {
         final var inRange = getEntities(type, pos, 2);
-        assertTrue(inRange.size() == 1, "Only one entity must be present at " + pos);
-        return inRange.get(0);
+        assertTrue(inRange.size() == 1, Component.translatable("Only one entity must be present at %s", pos.toString()));
+        return inRange.getFirst();
     }
 
     @CanIgnoreReturnValue
@@ -349,12 +339,48 @@ public class ExtendedGameTestHelper extends GameTestHelper {
         addEndListener(success -> NeoForge.EVENT_BUS.unregister(event));
     }
 
-    public <E extends LivingEntity> void assertMobEffectPresent(E entity, Holder<MobEffect> effect, String testName) {
-        assertEntityProperty(entity, e -> e.hasEffect(effect), testName);
+    public <E extends LivingEntity> void assertMobEffectPresent(E entity, Holder<MobEffect> effect, Component testName) {
+        this.assertEntityProperty(entity, e -> e.hasEffect(effect), testName);
     }
 
-    public <E extends LivingEntity> void assertMobEffectAbsent(E entity, Holder<MobEffect> effect, String testName) {
-        assertEntityProperty(entity, e -> !e.hasEffect(effect), testName);
+    public <E extends LivingEntity> void assertMobEffectAbsent(E entity, Holder<MobEffect> effect, Component testName) {
+        this.assertEntityProperty(entity, e -> !e.hasEffect(effect), testName);
+    }
+
+    public void assertTrue(boolean value, String message) {
+        this.assertTrue(value, Component.translatable(message));
+    }
+
+    public void assertFalse(boolean value, String message) {
+        this.assertFalse(value, Component.translatable(message));
+    }
+
+    public void fail(String message) {
+        this.fail(Component.translatable(message));
+    }
+
+    public void fail(String message, BlockPos pos) {
+        this.fail(Component.translatable(message), pos);
+    }
+
+    public void assertBlock(BlockPos pos, Predicate<Block> predicate, String message) {
+        this.assertBlock(pos, predicate, block -> Component.translatable(message, block));
+    }
+
+    public <T> void assertValueEqual(T expected, T actual, String message) {
+        this.assertValueEqual(expected, actual, Component.translatable(message));
+    }
+
+    public <T, E extends Entity> void assertEntityProperty(E entity, Function<E, T> function, String message, T value) {
+        this.assertEntityProperty(entity, function, value, Component.translatable(message));
+    }
+
+    public <E extends Entity> void assertEntityProperty(E entity, Predicate<E> predicate, String message) {
+        this.assertEntityProperty(entity, predicate, Component.translatable(message));
+    }
+
+    public <T> Holder<T> getHolder(ResourceKey<T> resourceKey) {
+        return getLevel().holder(resourceKey).orElseThrow(() -> this.assertionException("No registered value %s found in loaded data", resourceKey));
     }
 
     @FunctionalInterface
